--- a/daprojects.html
+++ b/daprojects.html
@@ -82,7 +82,7 @@
 								</header>
 								<a class="image main" ><img src="images/ecommerce.png" alt=""/></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/akshank-11/E-commerce-Sales-Data-Analysis-PowerBI/blob/main/EcommerceSalesDashboard-Power%20BI.png" target="_blank" class="button large">Full Project</a></li>
+									<li><a href="https://github.com/akshank-11/E-commerce-Sales-Data-Analysis-PowerBI/blob/main/Ecommerce_Sales_Dashboard_v2.png" target="_blank" class="button large">Full Project</a></li>
 								</ul>
 							</section>
 				
