--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 								<div class="field">
 									<h2>Contact:</h2>
 									<label for="name" style="text-transform: capitalize; color: black;">Akshitha Shankar</label>
-									<label for="email" style="text-transform: lowercase; color: black;">akshank@iu.edu</label>
+									<label for="email" style="text-transform: lowercase; color: black;">akshank.work@gmail.edu</label>
 								</div>
 							</div>
 						</form>
