--- a/daprojects.html
+++ b/daprojects.html
@@ -104,7 +104,7 @@
                             <span style="font-weight: bold;"> Python (Pandas, Numpy, Matplotlib, Sci-kit Learn) | Jupyter Notebook | VSCode </span>
                         </p>
                     </header>
-                    <a class="image main" ><img src="images/creditriskimage" alt=""/></a>
+                    <a class="image main" ><img src="images/creditriskimage.avif" alt=""/></a>
                     <ul class="actions special">
                         <li><a href="https://github.com/akshank-11/Credit-Risk-Analysis" target="_blank" class="button large">Full Project</a></li>
                     </ul>
