--- a/index.html
+++ b/index.html
@@ -42,18 +42,62 @@
 
 				<!-- Main -->
 					<div id="main">
-
 						<!-- Featured Post -->
-							<article class="post featured">
-								<h2><a href="#">My journey</a></h2>
-								<a class="image main"><img src="images/journey.png" alt="" /></a>
-								<!-- <header class="major">
-									<p>I am good at</p>
-								</header> -->
-								<ul class="actions special">
-									<li><a href="https://www.linkedin.com/in/akshitha-shankar/" class="button large">Full Profile</a></li>
-								</ul>
-							</article>
+						<article class="post featured">
+							<h2><a href="#">My Journey</a></h2>
+							<div class="timeline">
+								<div class="timeline-item">
+									<div class="timeline-icon"><i class="fas fa-graduation-cap"></i></div>
+									<div class="timeline-content">
+										<img src="images/VIT.png" alt="" style="width: 10%; height: 10%;"/>
+										<h3>B.Tech in Electrical & Electronics Engineering (2017-2021)</h3>
+										<p style="text-align: center;">During my undergraduate years, I honed my technical skills in software development while cultivating a strong passion for competitive coding. <br>
+											<br><span style="color: black; font-weight: bold;"> Machine Learning | Statistics | Python | DSA | AI | Lean Management </span> <br>
+											Activities: Enactus, AIESEC, Music, Dance </p>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-icon"><i class="fas fa-briefcase"></i></div>
+									<div class="timeline-content">
+										<img src="images/wipro.png" alt="" style="width: 15%; height: 15%;"/>
+										<h3>Software Engineer (2021-2023)</h3>
+										<p style="text-align: center;">I joined the PROMAX team as a Software Developer, where I collaborated with cross-functional teams to deliver impactful solutions for clients. Along the way, I gained a deeper understanding of product development and honed my ability to see the bigger picture. <br>
+										<br><span style="color: black; font-weight: bold;"> C# | .NET | C++ | SQL | Azure DevOps | Agile/Scrum </span> <br>
+										</p>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-icon"><i class="fas fa-university"></i></div>
+									<div class="timeline-content">
+										<img src="images/kelley.png" alt="" style="width: 10%; height: 10%;"/>
+										<h3>Kelley School of Business - MS Information Systems (2023-2024)</h3>
+										<p style="text-align: center;">I sharpened my skills in analytics, consulting, and cybersecurity, while immersing myself in the vibrant MSIS community. <br>
+										<br><span style="color: black; font-weight: bold;"> Data Analytics | Information Security | IT Strategy | SAP S/4 HANA | Cloud Computing </span> <br>
+											Activities: Graduate Teaching Assistant, Student Ambassador, Cybersecurity Association, GCC Student Leadership, DSAIL Research </p>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-icon"><i class="fas fa-user-tie"></i></div>
+									<div class="timeline-content">
+										<img src="images/iu.png" alt="" style="width: 30%; height: 10%;"/>
+										<h3>Data Analyst Intern: Project HOPE (2024)</h3>
+										<p style="text-align: center;"> I developed interactive dashboards to provide data-driven insights, collaborated with stakeholders to align project goals, and led cross-functional teams while enhancing project management efficiency through agile tools.<br>
+										<br><span style="color: black; font-weight: bold;"> Tableau | SQL | Salesforce | Google Analytics | Trello </span>
+										</p>
+									</div>
+								</div>
+								<div class="timeline-item">
+									<div class="timeline-icon"><i class="fas fa-chart-line"></i></div>
+									<div class="timeline-content">
+										<img src="images/iu.png" alt="" style="width: 30%; height: 10%;"/>
+										<h3>Research Analyst: Data Science & AI Lab (2024)</h3>
+										<p style="text-align: center;">Currently contributing to AI security research, analyzing large-scale vulnerabilities, and developing insightful data visualizations. <br>
+										<br><span style="color: black; font-weight: bold;"> Python | MySQL | API | Hugging Face | Data Warehousing | HPC </span>
+										</p>
+									</div>
+								</div>
+							</div>
+						</article>
 					</div>
 
 				<!-- Footer -->
