--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 									<div class="timeline-icon"><i class="fas fa-chart-line"></i></div>
 									<div class="timeline-content">
 										<img src="images/iu.png" alt="" style="width: 30%; height: 10%;"/>
-										<h3>Research Analyst: Data Science & AI Lab (2024)</h3>
+										<h3>Research Data Engineer: Data Science & AI Lab (2024)</h3>
 										<p style="text-align: center;">Currently contributing to AI security research, analyzing large-scale vulnerabilities, and developing insightful data visualizations. <br>
 										<br><span style="color: black; font-weight: bold;"> Python | MySQL | API | Hugging Face | Data Warehousing | HPC </span>
 										</p>
